add dict 字典管理功能

--- a/nbone-sysconf-web/src/main/resources/application.properties
+++ b/nbone-sysconf-web/src/main/resources/application.properties
@@ -1,5 +1,9 @@
-spring.application.name=sysconf
+spring.profiles.active=dev
+spring.application.name=sysconf11
+
 spring.jackson.default-property-inclusion=non_null
+
+
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.username=apus_bg
 spring.datasource.password=uZw2Ydra
@@ -9,6 +13,8 @@ spring.datasource.druid.max-active=10
 spring.datasource.druid.remove-abandoned=true
 spring.datasource.druid.remove-abandoned-timeout=1800
 
+
+logging.level.requestHandledListener=DEBUG
 
 demo.url=demo0,demo1
 demo0.url=demo0
