--- a/nbone-sysconf-web/pom.xml
+++ b/nbone-sysconf-web/pom.xml
@@ -21,7 +21,27 @@
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.1.17</version>
         </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2-SNAPSHOT</version>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.7.0-SNAPSHOT</version>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 
+    <build>
+        <plugins>
+            <!-- <plugin>
+                 <groupId>org.springframework.boot</groupId>
+                 <artifactId>spring-boot-maven-plugin</artifactId>
+             </plugin>-->
+        </plugins>
+    </build>
 </project>
