--- a/nbone-sysconf-web/pom.xml
+++ b/nbone-sysconf-web/pom.xml
@@ -33,6 +33,19 @@
             <version>2.7.0-SNAPSHOT</version>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>io.github.swagger2markup</groupId>
+            <artifactId>swagger2markup</artifactId>
+            <version>1.3.2</version>
+            <optional>true</optional>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 
