--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>org.nbone</groupId>
             <artifactId>nbone-framework</artifactId>
-            <version>1.1.2-SNAPSHOT</version>
+            <version>1.1.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -71,4 +71,18 @@
             </plugin>
         </plugins>
     </build>
+
+    <!-- 发布到仓库配置 -->
+    <distributionManagement>
+        <repository>
+            <id>apus</id>
+            <name>libs-releases</name>
+            <url>http://public-maven.apuscn.com/nexus/content/repositories/releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>apus</id>
+            <name>libs-snapshots</name>
+            <url>http://public-maven.apuscn.com/nexus/content/repositories/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
