add dict ResourceLanguage function

--- a/nbone-sysconf-web/src/main/resources/application.properties
+++ b/nbone-sysconf-web/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.datasource.druid.remove-abandoned-timeout=1800
 
 
 logging.level.requestHandledListener=DEBUG
-
+resource_id
 demo.url=demo0,demo1
 demo0.url=demo0
 demo1.url=demo1
