add  Application  MessageTemplate

--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,10 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>org.nbone.modules.sys</groupId>
     <artifactId>nbone-sysconf</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>${sysconf.version}</version>
     <modules>
         <module>nbone-sysconf-service</module>
         <module>nbone-sysconf-web</module>
@@ -15,21 +14,51 @@
 
     <properties>
         <sysconf.version>1.0.0-SNAPSHOT</sysconf.version>
+        <revision>1.0.0-SNAPSHOT</revision>
+        <nbone.version>1.0.0-SNAPSHOT</nbone.version>
     </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.18.RELEASE</version>
+        <version>1.5.19.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
+    <name>nbone-sysconf</name>
+    <url>https://github.com/thinking-github/nbone-sysconf</url>
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+    <organization>
+        <name>nbone.org</name>
+    </organization>
+    <description>java development framework for sysconf</description>
+    <scm>
+        <url>https://github.com/thinking-github/nbone-sysconf</url>
+        <developerConnection>thinking</developerConnection>
+        <tag>master</tag>
+        <connection>git@github.com:thinking-github/nbone-sysconf.git</connection>
+    </scm>
+    <developers>
+        <developer>
+            <id />
+            <name>thinking</name>
+            <email>chenyicheng00@gmail.com</email>
+            <!--<email>lang945077285@163.com</email>-->
+        </developer>
+    </developers>
+    <inceptionYear>2018</inceptionYear>
 
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.nbone.modules.sys</groupId>
                 <artifactId>nbone-sysconf-service</artifactId>
-                <version>${project.version}</version>
+                <version>${sysconf.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -38,7 +67,7 @@
         <dependency>
             <groupId>org.nbone</groupId>
             <artifactId>nbone-framework</artifactId>
-            <version>1.1.3-SNAPSHOT</version>
+            <version>${nbone.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -53,6 +82,14 @@
     </dependencies>
 
     <build>
+        <resources>
+            <!--<resource>
+                <directory>db</directory>
+                <excludes>
+                    <exclude>*.sql</exclude>
+                </excludes>
+            </resource>-->
+        </resources>
         <plugins>
             <plugin>
                 <artifactId>maven-source-plugin</artifactId>
@@ -65,6 +102,34 @@
                         <phase>package</phase>
                         <goals>
                             <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <!--<plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <generateBackupPoms>false</generateBackupPoms>
+                </configuration>
+            </plugin>-->
+            <!--优化、压缩发布的pom文件-->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>flatten-maven-plugin</artifactId>
+                <version>1.0.1</version>
+                <configuration>
+                    <updatePomFile>true</updatePomFile>
+                    <outputDirectory>target</outputDirectory>
+                    <flattenMode>ossrh</flattenMode>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>flatten</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>flatten</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -85,4 +150,55 @@
             <url>http://public-maven.apuscn.com/nexus/content/repositories/snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
+
+    <profiles>
+        <profile>
+            <id>release</id>
+            <build>
+                <plugins>
+                   <!-- <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>3.0.1</version>
+                        <configuration>
+                            <charset>UTF-8</charset>
+                            <encoding>UTF-8</encoding>
+                            <doclint>none</doclint>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>-->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.6</version>
+                        <executions>
+                            <execution>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+            <distributionManagement>
+                <snapshotRepository>
+                    <id>nbone-sonatype</id>
+                    <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+                </snapshotRepository>
+                <repository>
+                    <id>nbone-sonatype</id>
+                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+                </repository>
+            </distributionManagement>
+        </profile>
+    </profiles>
 </project>
