--- a/nbone-sysconf-service/pom.xml
+++ b/nbone-sysconf-service/pom.xml
@@ -5,11 +5,13 @@
     <parent>
         <artifactId>nbone-sysconf</artifactId>
         <groupId>org.nbone.modules.sys</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>${sysconf.version}</version>
+        <relativePath>..</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>nbone-sysconf-service</artifactId>
+    <name>nbone-sysconf-service</name>
 
 
     <dependencies>
@@ -20,6 +22,12 @@
         <dependency>
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.ctrip.framework.apollo</groupId>
+            <artifactId>apollo-client</artifactId>
+            <version>1.4.0</version>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>io.swagger</groupId>
