--- a/nbone-sysconf-web/pom.xml
+++ b/nbone-sysconf-web/pom.xml
@@ -5,16 +5,27 @@
     <parent>
         <artifactId>nbone-sysconf</artifactId>
         <groupId>org.nbone.modules.sys</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>${sysconf.version}</version>
+        <relativePath>..</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>nbone-sysconf-web</artifactId>
+    <name>nbone-sysconf-web</name>
 
     <dependencies>
         <dependency>
             <groupId>org.nbone.modules.sys</groupId>
             <artifactId>nbone-sysconf-service</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.0.0.Final</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
